fix anchor tag contrast in contact section

--- a/public/css/component/_contact.scss
+++ b/public/css/component/_contact.scss
@@ -32,11 +32,11 @@
       }
 
       a {
-        color: $icon-color;
+        color: $bg-orange;
         font-size: 0.9em;
 
         &:hover {
-          color: rgba( $text-color, .7 );
+          color: rgba( $text-color, .8 );
         }
       }
 
@@ -72,7 +72,7 @@
     transition: background-color 0.5s ease-in;
 
     &:hover {
-      background-color: rgba( $text-color, .7 );
+      background-color: rgba( $text-color, .8 );
     }
 
     #resume {
